--- a/src/scss/config/_reset.scss
+++ b/src/scss/config/_reset.scss
@@ -23,25 +23,31 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol, ul {
   list-style: none;
 }
+
 blockquote, q {
   quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -58,7 +64,7 @@ table {
 }
 
 .js-enabled .no-js__message {
-  display:none;
+  display: none;
 }
 
 .hidden:not(:focus):not(:active) {
@@ -69,4 +75,14 @@ table {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+@font-face {
+  font-family: "Newsreader";
+  src: url("../../font/Newsreader/Newsreader-VariableFont_opsz,wght.ttf");
+}
+
+@font-face {
+  font-family: "Noi Grotesk Trial";
+  src: url("../../font/Noi Grotesk Family Trial/3 Variable/NoiVariableFixTrialGX.ttf");
 }
