--- a/src/scss/main/_home.scss
+++ b/src/scss/main/_home.scss
@@ -1,27 +1,39 @@
 /* Home section */
 .home {
+  display: grid;
+  grid-row-gap: 2.2rem;
+  padding: 24px 1.8rem 64px;
 
   &__column1 {
-
     &__image {
+      display: flex;
+      justify-content: center;
+      width: 300px;
+      height: 300px;
+      margin: auto;
+      border: none;
+      border-radius: 100%;
+      background: #f2e0ca;
+      box-shadow: inset 0 4px 4px rgba(0, 0, 0, .25);
 
       img {
-
+        display: block;
+        width: 276px;
+        height: 276px;
+        margin: auto;
+        border: none;
+        border-radius: 100%;
       }
-    }
-
-    span {
-
-    }
-
-    &__link {
-
     }
   }
 
   &__column2 {
+    display: grid;
+    grid-row-gap: 1.3rem;
 
     &__title {
+      line-height: 37.8px;
+      letter-spacing: -0.2px;
 
       span {
 
@@ -29,11 +41,21 @@
     }
 
     &__text {
-
+      font-family: Newsreader, "Times New Roman", sans-serif;
+      font-weight: 300;
+      line-height: 20.8px;
     }
+  }
+}
 
-    &__link {
-
-    }
+@media (max-width: 950px) {
+  .special_hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
   }
 }
