--- a/src/scss/main/_portfolio.scss
+++ b/src/scss/main/_portfolio.scss
@@ -1,22 +1,46 @@
 /* Portfolio section */
 .portfolio {
+  padding: 36px 1.8rem;
 
-  &__title {
+  &__container {
+    display: grid;
+    background: #f9ffd8;
+    padding: 24px 1.6rem;
+    border: none;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.04) 2px 4px 24px;
+    margin: auto;
 
-    span {
+    &__right {
+      &__title {
+        line-height: 39.9px;
+        letter-spacing: -0.2px;
+      }
 
+      &__text {
+        font-family: Newsreader, "Times New Roman", Serif;
+        font-weight: 300;
+        margin-top: 1.8rem;
+        padding-right: 1.8rem;
+        line-height: 20.8px;
+      }
+
+      &__link {
+        display: block;
+        margin: 1.8rem 0;
+      }
     }
-  }
 
-  &__text {
-
-  }
-
-  &__link {
+    img {
+      width: 320px;
+      height: 320px;
+    }
 
   }
-
-  &__img {
-
+}
+@media (max-width: 950px) {
+  .portfolio{
+    &__container{
+      max-width: 640px;    }
   }
 }
