--- a/src/scss/main/_info.scss
+++ b/src/scss/main/_info.scss
@@ -1,22 +1,50 @@
 /* Info section */
 .info {
+  display: block;
+  padding: 24px;
+  background: #6cd689;
+  border: none;
+  border-radius: 6px;
+  max-width: 41.25rem;
+  margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.04) 2px 4px 2;
+
 
   &__content {
+    font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+    line-height: 1.3;
+    display: grid;
+    grid-row-gap: 1.5rem;
 
     &__title {
-
+      font-size: 1.25rem;
     }
 
     &__text {
-
     }
 
     &__link {
-
+      background: white;
     }
   }
 
-  img {
+  &__image {
 
+    img {
+      display: block;
+      margin: auto;
+      width: 50%;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .info {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+
+    img {
+      width: 75%
+    }
   }
 }
