--- a/src/scss/main/_reviews.scss
+++ b/src/scss/main/_reviews.scss
@@ -1,34 +1,69 @@
 /* Reviews section */
 .reviews {
+  padding: 3em 1.5em;
 
-  &__title {
+  &__head {
+    display: grid;
+    grid-row-gap: 1.5em;
+    margin-bottom: 4rem;
 
-    span {
+    &__title {
+      text-align: center;
 
+      span {
+        display: block;
+        text-align: center;
+
+      }
+    }
+
+    &__text {
+      text-align: center;
+      font-family: Newsreader, "Times New Roman", Serif;
+      font-size: 1.25rem;
+      font-weight: 300;
     }
   }
 
-  &__text {
-
-  }
-
   &__smallText {
-
+    display: block;
+    font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 36px;
   }
 
   &__article {
+    display: grid;
+    grid-row-gap: 4rem;
+    padding: 1.8rem;
+    background: white;
+    border: none;
+    border-radius: 6px;
+    margin-bottom: 40px;
+    box-shadow: rgba(0, 0, 0, 0.04) 2px 4px 24px;
+
 
     &__title {
 
     }
 
     &__text {
-
+      font-family: Newsreader, "Times New Roman", Serif;
+      font-style: italic;
+      font-weight: 300;
+      font-size: 1.5rem;
+      line-height: 1.3;
     }
 
     &__name {
+      font-family: Newsreader, "Times New Roman", Serif;
+      font-weight: 300;
+      line-height: 1.3;
 
       span {
+        display: block;
+        font-style: italic;
       }
     }
   }
