--- a/src/scss/main/_skills.scss
+++ b/src/scss/main/_skills.scss
@@ -1,9 +1,16 @@
 /* Skills section */
 .skills {
+  background: #eef2e4;
+  padding: 36px 1.8rem;
 
   &__column1 {
+    display: grid;
+    grid-row-gap: 1.8rem;
+    margin-bottom: 36px;
 
     &__title {
+      line-height: 37.8px;
+      letter-spacing: -0.2px;
 
       span {
 
@@ -11,25 +18,53 @@
     }
 
     &__text {
-
+      font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+      font-size: 1rem;
+      line-height: 1.3;
     }
   }
 
   &__column2 {
+    display: grid;
+    grid-gap: 1.5rem;
+    justify-content: center;
 
     &__article {
+      display: grid;
+      grid-row-gap: 0.75rem;
+      padding: 1.5rem;
+      background: white;
+      border: none;
+      border-radius: 6px;
+      box-shadow: 2px 4px 24px rgba(0, 0, 0, .04);
 
       &__title {
-
+        font-family: Newsreader, "Times New Roman", Serif;
+        font-style: italic;
+        font-weight: 400;
+        font-size: 1.25rem;
+        color: #005924;
       }
 
       &__text {
-
+        font-family: Newsreader, "Times New Roman", Serif;
+        font-weight: 300;
+        line-height: 1.3;
       }
     }
 
     &__link {
-
+      font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+      font-size: 1rem;
+      background-color: #6cd689;
+      color: black;
+      text-align: center;
+      border-radius: 6px;
+      padding: 0.75rem 0.875rem;
+      text-decoration: none;
     }
+
+
   }
 }
+
