--- a/src/scss/main/_contact.scss
+++ b/src/scss/main/_contact.scss
@@ -1,82 +1,144 @@
 /* Contact section -> full page screen */
 .contact {
+  background: #b6ebc4;
+  padding: 1.5rem;
 
-  &__close{
+  &__close {
 
   }
 
   &__container {
+    display: grid;
+    grid-row-gap: 2.25rem;
 
     &__infos {
+      display: grid;
+      grid-row-gap: 1.5rem;
 
       .title {
+        font-size: 2.25rem;
 
       }
 
       .text {
-
+        font-family: Newsreader, "Times New Roman", Serif;
+        font-size: 1.2rem;
+        line-height: 1.2;
+        font-weight: 300;
       }
 
       .img {
 
       }
     }
-  }
 
-  &__form {
+    .contact__form {
+      #formContact {
+        display: block;
+        padding: 2rem;
+        background: white;
+        border-radius: 6px;
+        font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+      }
 
-    fieldset {
+      fieldset {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        gap: 1.5rem;
 
-      label {
+        label {
+          display: block;
+          font-size: 1rem;
+          margin-bottom: 4px;
+        }
+
+        input {
+          font-size: 1.2rem;
+          display: block;
+          box-sizing: border-box;
+          width: 100%;
+          border: none;
+          border-bottom: 1px solid darkgrey;
+          padding: 8px 0;
+          color: #005924;
+
+        }
+      }
+
+      &__firstname {
 
       }
 
-      input {
+      &__name {
 
       }
-    }
 
-    &__firstname {
-
-    }
-
-    &__name {
-
-    }
-
-    &__email {
-
-    }
-
-
-    &__phoneNumber {
-
-    }
-
-    &__budget {
-
-      option {
+      &__email {
 
       }
-    }
 
-    &__message {
 
-      textarea {
+      &__phoneNumber {
 
       }
-    }
 
-    button[type="submit"] {
+      &__budget {
+        select {
+          display: block;
+          width: 100%;
+          border: none;
+          border-bottom: 1px solid darkgrey;
+          padding: 8px 0;
+          font-size: 1.2rem;
+        }
 
-    }
+        option {
 
-    &__text {
+        }
+      }
 
-    }
+      &__message {
 
-    &__link {
+        textarea {
+          font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+          display: block;
+          width: 100%;
+          border: none;
+          border-bottom: 1px solid darkgrey;
+          padding: 8px 0;
+          font-size: 1.2rem;
+          color: #005924;
+        }
+      }
 
+      button[type="submit"] {
+        display: block;
+        border: none;
+        border-radius: 4px;
+        padding: 14px 1rem;
+        background: #6cd689;
+      }
+
+      &__bottom {
+        background: #fbfcf5;
+        padding: 32px 1rem;
+        text-align: center;
+        display: grid;
+        grid-row-gap: 0.375rem;
+        border-radius: 0 0 4px 4px;
+
+        &__text {
+          font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+        }
+
+        &__link {
+          text-decoration: none;
+          font-family: Newsreader, "Times New Roman", Serif;
+          font-style: italic;
+          color: #005924;
+        }
+      }
     }
   }
 }
