Adding scss transform to full screen

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -5,7 +5,7 @@
 
 /* Header */
 @import "partials/header";
-
+@import "partials/burger";
 /* Page principale */
 @import "main/home";
 @import "main/parcours";
