--- a/src/scss/config/_globale.scss
+++ b/src/scss/config/_globale.scss
@@ -22,8 +22,9 @@ h2 {
   display: block;
   font-family: Newsreader, "Times New Roman", serif;
   font-style: italic;
-  font-size: 2rem;
   font-weight: 350;
+  line-height: 1.2;
+
 }
 
 .cta {
