--- a/src/scss/main/_home.scss
+++ b/src/scss/main/_home.scss
@@ -30,6 +30,7 @@
   &__column2 {
     display: grid;
     grid-row-gap: 1.3rem;
+    margin: auto;
 
     &__title {
       line-height: 37.8px;
@@ -48,7 +49,7 @@
   }
 }
 
-@media (max-width: 990px) {
+@media (max-width: 991px) {
   .special_hidden:not(:focus):not(:active) {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -57,5 +58,68 @@
     position: absolute;
     white-space: nowrap;
     width: 1px;
+  }
+}
+
+@media (min-width: 991px) {
+  .home {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-column-gap: 2.25rem;
+
+    &__column1 {
+      text-align: center;
+      order: 2;
+      padding: 1.5rem 1.5rem 0 0;
+
+
+      span {
+        font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+      }
+
+      a {
+        display: block;
+        font-family: Newsreader, "Times New Roman", Serif;
+        font-style: italic;
+        font-weight: 300;
+        color: #118631;
+        text-decoration: none;
+        padding-top: 0.6rem;
+      }
+    }
+
+    &__column2 {
+      &__text {
+        max-width: 47ch;
+      }
+
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .home {
+    h2 {
+      font-size: 4rem;
+      line-height: 1;
+
+      span {
+        font-size: 4rem;
+      }
+    }
+
+    &__column1 {
+      &__image {
+        width: 500px;
+        height: 500px;
+        margin-bottom: 2.25rem;
+
+
+        img {
+          width: 460px;
+          height: 460px;
+        }
+      }
+    }
   }
 }
