--- a/src/scss/main/_portfolio.scss
+++ b/src/scss/main/_portfolio.scss
@@ -5,7 +5,7 @@
   &__container {
     display: grid;
     background: #f9ffd8;
-    padding: 24px 1.6rem;
+    padding: 24px 4rem 24px 1.6rem;
     border: none;
     border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.04) 2px 4px 24px;
@@ -31,16 +31,31 @@
       }
     }
 
-    img {
-      width: 320px;
-      height: 320px;
-    }
-
   }
 }
-@media (max-width: 990px) {
-  .portfolio{
-    &__container{
-      max-width: 640px;    }
+
+@media (min-width: 768px) {
+  .portfolio {
+    &__container {
+    }
+  }
+}
+
+@media (min-width: 991px) {
+  .portfolio {
+    &__container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      align-items: center;
+      &__right{
+        order: 2;
+        &__title{
+          font-size: 3rem;
+        }
+      }
+
+      img {
+      }
+    }
   }
 }
