--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,21 +1,67 @@
 /* Header banner */
-.banner {
+@media (min-width: 991px) {
 
-  &__title {
 
-    a {
+  .banner {
+    padding: 2.25rem;
 
-    }
-  }
+    &__navigation {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-  &__navigation {
+      &__title {
+        font-size: 1.5rem;
+      }
 
-    &__list {
+      &__list {
+        &__link {
+          display: grid;
+          grid-template-columns: auto auto auto auto;
+          grid-column-gap: 2.25rem;
 
-      li {
+          li {
 
-        a {
 
+            a {
+              font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+              color: black;
+              text-decoration: none;
+            }
+
+            a:hover {
+              color: #005924;
+            }
+          }
+        }
+
+        &__more {
+          display: grid;
+          grid-column-gap: 2.25rem;
+          grid-template-columns: auto auto;
+
+          li {
+            .btn {
+              padding: 12px 14px;
+            }
+
+            .btn:hover {
+              color: black;
+              transition: 0.5s;
+              border-radius: 6px;
+              background: #6cd689;
+            }
+
+            a {
+              font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
+              color: black;
+              text-decoration: none;
+            }
+
+            a:hover {
+              color: #005924;
+            }
+          }
         }
       }
     }
