--- a/src/scss/main/_reviews.scss
+++ b/src/scss/main/_reviews.scss
@@ -34,6 +34,8 @@
   }
 
   &__article {
+    margin: auto;
+    max-width: 41.625rem;
     display: grid;
     grid-row-gap: 4rem;
     padding: 1.8rem;
@@ -52,7 +54,7 @@
       font-family: Newsreader, "Times New Roman", Serif;
       font-style: italic;
       font-weight: 300;
-      font-size: 1.5rem;
+      font-size: 2rem;
       line-height: 1.3;
     }
 
