--- a/src/scss/main/_skills.scss
+++ b/src/scss/main/_skills.scss
@@ -79,10 +79,12 @@
       align-items: flex-start;
       padding-right: 24px;
       display: flex;
-      position: relative;
 
       &__column1 {
-        max-width: 54ch;;
+        max-width: 54ch;
+        svg{
+          width: 100%;
+        }
 
       }
     }
