--- a/src/scss/main/_about.scss
+++ b/src/scss/main/_about.scss
@@ -61,16 +61,12 @@
 
     &__photo {
       width: auto;
-      padding: 1.8rem;
       border: none;
-      border-radius: 6px;
-      background: #6cd689;
-      /*background-image: url("../../img/about_moi.jpg");
-       background-position: center;
-       background-size: cover;
-       background-repeat: no-repeat;*/
+
 
       img {
+        border-radius: 6px;
+        height: 400px;
       }
     }
 
@@ -189,7 +185,6 @@
     &__content {
       width: 100%;
       height: 100%;
-      padding: 6rem;
       margin: auto;
       display: grid;
       grid-template-columns: 1fr;
@@ -206,6 +201,11 @@
       &__photo {
         grid-area: p;
 
+        img {
+          max-width: 400px;
+          max-height: 555px;
+          height: 100%;
+        }
       }
 
       &__client {
