--- a/src/scss/main/_reviews.scss
+++ b/src/scss/main/_reviews.scss
@@ -33,40 +33,59 @@
     margin-bottom: 36px;
   }
 
-  &__article {
-    margin: auto;
-    max-width: 41.625rem;
-    display: grid;
-    grid-row-gap: 4rem;
-    padding: 1.8rem;
-    background: white;
-    border: none;
-    border-radius: 6px;
-    margin-bottom: 40px;
-    box-shadow: rgba(0, 0, 0, 0.04) 2px 4px 24px;
+  &__slider {
+
+    display: flex;
+    flex-direction: row;
+    gap: 0 1rem;
+    overflow-x: scroll;
+    padding: 1rem;
+
+    &__article {
+      width: 100%;
+      max-width: 41.625rem;
+      min-width: 350px;
+      display: grid;
+      grid-row-gap: 4rem;
+      padding: 1.8rem;
+      background: white;
+      border: none;
+      border-radius: 6px;
+      margin-bottom: 40px;
+      box-shadow: rgba(0, 0, 0, 0.04) 2px 4px 24px;
 
 
-    &__title {
+      &__title {
 
-    }
+      }
 
-    &__text {
-      font-family: Newsreader, "Times New Roman", Serif;
-      font-style: italic;
-      font-weight: 300;
-      font-size: 2rem;
-      line-height: 1.3;
-    }
-
-    &__name {
-      font-family: Newsreader, "Times New Roman", Serif;
-      font-weight: 300;
-      line-height: 1.3;
-
-      span {
-        display: block;
+      &__text {
+        font-family: Newsreader, "Times New Roman", Serif;
         font-style: italic;
+        font-weight: 300;
+        font-size: 1.25rem;
+        line-height: 1.3;
+      }
+
+      &__name {
+        font-family: Newsreader, "Times New Roman", Serif;
+        font-weight: 300;
+        line-height: 1.3;
+
+        span {
+          display: block;
+          font-style: italic;
+        }
       }
     }
+  }
+}
+@media (min-width: 991px) {
+  .reviews__slider__article{
+    transform: translate(350px, 0px);
+    min-width: 650px;
+  }
+  .reviews__slider__article__text{
+    font-size: 2em;
   }
 }
