--- a/src/scss/main/_about.scss
+++ b/src/scss/main/_about.scss
@@ -75,16 +75,22 @@
       background: #f9ffd8;
       border: none;
       border-radius: 6px;
-      display: grid;
-      grid-template-rows: auto 1fr;
-      grid-row-gap: 1.8rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      gap: 1.5rem;
 
-      img {
-        border: none;
-        border-radius: 6px;
+      &__image {
+        img {
+          border: none;
+          border-radius: 6px;
+        }
       }
 
       blockquote {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         font-family: Newsreader, "Times New Roman", Serif;
         font-size: 1.7rem;
         font-weight: 300;
@@ -97,7 +103,6 @@
           font-size: 0.8rem;
           font-weight: 300;
           font-style: italic;
-          margin-top: 2.8rem;
           line-height: normal;
         }
 
@@ -168,13 +173,10 @@
 
 @media (min-width: 768px) {
   .about__content__client {
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 1.8rem;
-    grid-row-gap: 0;
+    flex-direction: row;
 
     blockquote {
       cite {
-        margin-top: 3rem;
       }
     }
   }
@@ -196,6 +198,7 @@
 
       &__citation {
         grid-area: ci;
+        max-width: 500px;
       }
 
       &__photo {
@@ -211,13 +214,37 @@
       &__client {
         grid-area: cl;
 
+        img {
+
+        }
       }
 
       &__stats {
         grid-area: st;
+        max-height: 20.625rem;
       }
     }
+  }
+}
+@media (min-width: 1150px) {
+  .about__content{
+    padding: 0 50px;
+  }
+}
+@media (min-width: 991px) and (max-width: 1150px) {
+  .about__content__client blockquote{
+    font-size: 1.5rem;
+  }
+  .about__content__citation{
+    margin-left: 50px;
+  }
+  .about__content__stats{
+    max-width: 350px;
 
-
+  }
+}
+@media (min-width: 1250px) {
+  .about__content{
+    padding: 0 100px;
   }
 }
