Adding css for mobile nav

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -67,4 +67,12 @@
     }
   }
 }
+@media (min-width: 991px) and (max-width: 1120px) {
+   a {
+    font-size: 0.8rem;
+  }
+  .banner__navigation__title{
+    font-size: 1.3rem;
+  }
+}
 
