--- a/src/scss/main/_parcours.scss
+++ b/src/scss/main/_parcours.scss
@@ -97,12 +97,26 @@
 }
 
 @media (min-width: 991px) {
-  .parcours {
-
-    &__container {
+  .parcours__container {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       align-items: center;
     }
+  }
+
+@media (min-width: 991px) and (max-width: 1130px) {
+  .parcours__container__card__title{
+    font-size: 1.6rem;
+  }
+  .parcours__container__card__text{
+    font-size: 0.8rem;
+  }
+  .parcours__container__card{
+    min-width: 230px;
+  }
+}
+@media (min-width: 1130px) {
+  .parcours__container__card{
+    min-width: 250px;
   }
 }
