--- a/src/scss/main/_home.scss
+++ b/src/scss/main/_home.scss
@@ -2,14 +2,14 @@
 .home {
   display: grid;
   grid-row-gap: 2.2rem;
-  padding: 80px 1.8rem 64px;
+  padding: 0 1.8rem 64px;
 
   &__column1 {
     &__image {
       display: flex;
       justify-content: center;
-      width: 300px;
-      height: 300px;
+      width: 310px;
+      height: 310px;
       margin: auto;
       border: none;
       border-radius: 100%;
@@ -49,7 +49,7 @@
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: $max-screen) {
   .special_hidden:not(:focus):not(:active) {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -61,7 +61,7 @@
   }
 }
 
-@media (min-width: 991px) {
+@media (min-width: $max-screen) {
   .home {
     display: grid;
     grid-template-columns: auto auto;
@@ -96,8 +96,12 @@
     }
   }
 }
-
-@media (min-width: 768px) {
+@media (max-width: $max-screen) {
+.home__column1{
+  margin-top: 80px;
+}
+}
+@media (min-width: $mid-screen) {
   .home {
     h2 {
       font-size: 4rem;
@@ -110,8 +114,8 @@
 
     &__column1 {
       &__image {
-        width: 500px;
-        height: 500px;
+        width: 510px;
+        height: 510px;
         margin-bottom: 2.25rem;
 
 
