--- a/src/scss/main/_contact.scss
+++ b/src/scss/main/_contact.scss
@@ -10,6 +10,7 @@
     top: 40px;
     right: 40px;
   }
+
   &__container {
     display: grid;
     grid-row-gap: 2.25rem;
@@ -67,6 +68,9 @@
           padding: 8px 0;
           color: #005924;
 
+          &::placeholder {
+            color: #a4a4a4;
+          }
         }
       }
 
@@ -78,6 +82,7 @@
           border-bottom: 1px solid darkgrey;
           padding: 8px 0;
           font-size: 1.2rem;
+          background: none;
         }
 
         option {
@@ -96,16 +101,25 @@
           padding: 8px 0;
           font-size: 1.2rem;
           color: #005924;
+          &::placeholder{
+            color: #a4a4a4;
+
+          }
         }
       }
 
       button[type="submit"] {
+        &:hover {
+          background: $cta-hover;
+        }
+
         display: block;
         border: none;
         border-radius: 4px;
         padding: 14px 1rem;
         background: #6cd689;
       }
+
 
       &__bottom {
         background: #fbfcf5;
@@ -130,7 +144,7 @@
   }
 }
 
-@media (min-width: 991px) {
+@media (min-width: $max-screen) {
   .contact {
     &__container {
       max-width: 75rem;
