--- a/src/scss/main/_info.scss
+++ b/src/scss/main/_info.scss
@@ -13,8 +13,9 @@
   &__content {
     font-family: "Noi Grotesk Trial", Helvetica, sans-serif;
     line-height: 1.3;
-    display: grid;
-    grid-row-gap: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.8rem;
 
     &__title {
       font-size: 1.25rem;
@@ -25,6 +26,10 @@
 
     &__link {
       background: white;
+
+      &:hover {
+        background: #f5f5f5;
+      }
     }
   }
 
@@ -38,7 +43,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mid-screen) {
   .info {
     display: grid;
     grid-template-columns: 2fr 1fr;
