--- a/src/scss/main/_parcours.scss
+++ b/src/scss/main/_parcours.scss
@@ -77,7 +77,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $mid-screen) {
   .parcours {
     &__container {
       &__image {
@@ -96,27 +96,28 @@
   }
 }
 
-@media (min-width: 991px) {
+@media (min-width: $max-screen) {
   .parcours__container {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      align-items: center;
-    }
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-items: center;
   }
+}
 
-@media (min-width: 991px) and (max-width: 1130px) {
-  .parcours__container__card__title{
+@media (min-width: $max-screen) and (max-width: 1130px) {
+  .parcours__container__card__title {
     font-size: 1.6rem;
   }
-  .parcours__container__card__text{
+  .parcours__container__card__text {
     font-size: 0.8rem;
   }
-  .parcours__container__card{
+  .parcours__container__card {
     min-width: 230px;
   }
 }
+
 @media (min-width: 1130px) {
-  .parcours__container__card{
+  .parcours__container__card {
     min-width: 250px;
   }
 }
