--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -70,7 +70,7 @@
   }
 }
 
-@media (min-width: 991px) and (max-width: 1120px) {
+@media (min-width: $max-screen) and (max-width: 1120px) {
   a {
     font-size: 0.8rem;
   }
