--- a/src/scss/main/_contact.scss
+++ b/src/scss/main/_contact.scss
@@ -101,7 +101,8 @@
           padding: 8px 0;
           font-size: 1.2rem;
           color: #005924;
-          &::placeholder{
+
+          &::placeholder {
             color: #a4a4a4;
 
           }
@@ -168,3 +169,22 @@
     }
   }
 }
+
+.modal {
+  position: fixed;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+
+  section {
+    overflow: scroll;
+  }
+}
+
+
+
